<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StefShop©</string>
    <string name="action_settings">Settings</string>
    <string name="logo">StefShop Logo</string>
    
    <!-- MAIN SCREEN STRINGS -->
    <string name="welcomeMsg">Welcome to StefShop©</string>
    <string name="note1">StefShop© is a shopping app designed to make shopping simplistic and easy.</string>
    <string name="note2">Please fill in your details below to begin shopping.</string>
    <string name="input_name">Please Enter Full Name</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="job_prompt">Select Your Occupation</string>
    <string name="input_age">Please Enter Your Age</string>
    <string name="input_funds">Please Enter Maximum Spend(€)</string>
    <string name="input_email">Please Enter Your E-mail</string>
    <string name="start">Start Shopping!</string>
    
    <!-- SHOPPING SCREEN STRINGS -->
    <string name="image_des">Item Image</string>
    <string name="heading">Select Quantity Then Add To Cart.</string>
    <string name="heading2">Click Continue To Cart To Checkout.</string>
    <string name="usr">User: </string>
    <string name="email">E-mail: </string>
    <string name="funds">Balance: </string>
    <string name="cart">Shopping Cart</string>
    <string name="pro">Proceed To Cart!</string>
    
    <!-- CHECKOUT SCREEN STRINGS -->
    <string name="headeritem">Item</string>
    <string name="headerprice">Price</string>
    <string name="headerquantity">Quantity</string>
    <string name="headertotal">Total</string>
    <string name="sendemail">Send Receipt</string>
    <string name="thank">Thank You For Shopping At StefShop</string>
    <string name="chkmsg1">Would You Like Your Receipt E-mailed To You? Click Send Receipt Below.</string>
    <string name="finished">Finished</string>
    <string name="chkmsg2">If You Are Happy Click Finished</string>

    <!-- COLOURS -->
    <color name="white">#FFFFFF</color>
    <color name="yellow">#ffdb00</color>
    <color name="red">#FF0000</color>

</resources>
