<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:background="@color/white"
	android:id="@+id/main" >
   
    <TextView
       android:id="@+id/thankmessage"
	   android:textSize="30sp"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:textIsSelectable="true"
	   android:text="@string/thank"
       android:layout_alignParentStart="true"
       android:gravity="center"
       android:layout_marginTop="5dp"
       android:layout_marginBottom="5dp" />
    
	<TextView
	   android:id="@+id/headn"
	   android:textSize="20sp"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:textIsSelectable="true"
	   android:text="@string/headeritem"
       android:layout_alignParentStart="true"
       android:layout_below="@+id/thankmessage"
       android:paddingStart="5dp"
       android:paddingEnd="80dp"
       android:textColor="@color/white"
       android:background="@color/red" />
	
	<TextView
	   android:id="@+id/headp"
	   android:textSize="20sp"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:textIsSelectable="true"
	   android:text="@string/headerprice"
       android:layout_toEndOf="@+id/headn"
       android:layout_below="@+id/thankmessage"
       android:paddingStart="30dp"
       android:paddingEnd="0dp"
       android:textColor="@color/white"
       android:background="@color/red" />
	
	<TextView
	   android:id="@+id/headq"
	   android:textSize="20sp"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:textIsSelectable="true"
	   android:text="@string/headerquantity"
       android:layout_toEndOf="@+id/headp"
       android:layout_below="@+id/thankmessage"
       android:paddingStart="30dp"
       android:paddingEnd="5dp"
       android:textColor="@color/white"
       android:background="@color/red" />
	

    <TextView
       android:id="@+id/productinfo"
	   android:textSize="15sp"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:textIsSelectable="true"
	   android:gravity="center"
	   android:layout_below="@+id/headn"
	   android:layout_alignParentStart="true" />
    
    <View
       android:layout_width="fill_parent"
       android:layout_height="2dp"
       android:background="#000000"
       android:layout_below="@+id/productinfo" />
    
    <TextView
       android:id="@+id/cost"
	   android:textSize="15sp"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:textIsSelectable="true"
	   android:gravity="center"
	   android:paddingTop="10dp"
	   android:layout_below="@+id/productinfo"
	   android:layout_alignParentEnd="true" />
    
    <TextView
       android:id="@+id/vat"
	   android:textSize="15sp"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:textIsSelectable="true"
	   android:gravity="center"
	   android:layout_below="@+id/cost"
	   android:layout_alignParentEnd="true"
	   android:layout_marginBottom="5dp" />
    
    <!-- Refernce: http://stackoverflow.com/questions/4146221/how-to-put-a-horizontal-divisor-line-between-edit-texts-in-a-activity -->
    <View
       android:layout_width="fill_parent"
       android:layout_height="2dp"
       android:background="#000000"
       android:layout_below="@+id/vat" />
    <!-- reference complete -->
    
    <TextView
       android:id="@+id/vattotal"
	   android:textSize="15sp"
	   android:textStyle="bold"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:textIsSelectable="true"
	   android:gravity="center"
	   android:layout_below="@+id/vat"
	   android:layout_alignParentEnd="true"
	   android:layout_marginTop="5dp" />
    
    <TextView
       android:id="@+id/messagechk1"
	   android:textSize="15sp"
	   android:text="@string/chkmsg1"
	   android:lines="2"
	   android:textStyle="bold"
	   android:layout_width="wrap_content"
	   android:layout_height="wrap_content"
	   android:textIsSelectable="true"
	   android:gravity="center"
	   android:layout_below="@+id/vattotal"
	   android:layout_marginTop="10dp" />
    
    <Button
       android:id="@+id/sendEmail"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/sendemail"
       android:layout_below="@+id/messagechk1"
       android:layout_marginTop="5dp" />
    
    <TextView
       android:id="@+id/messagechk2"
	   android:textSize="15sp"
	   android:text="@string/chkmsg2"
	   android:lines="2"
	   android:textStyle="bold"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:textIsSelectable="true"
	   android:gravity="center"
	   android:layout_below="@+id/sendEmail"
	   android:layout_marginTop="10dp" />
    
    <Button
       android:id="@+id/finished"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/finished"
       android:layout_below="@+id/messagechk2"
       android:layout_marginTop="5dp" />
	   
</RelativeLayout>